# nanki

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESKTOP_README.md  FEATURE_GAP_ANALYSIS.md  FEATURE_TEST_REPORT.md  LICENSE  Nanki.spec  README.md  STANDALONE.md  TAURI_FEATURE_GAP.md  TAURI_FEATURE_GAPS.md  TAURI_IMPLEMENTATION_COMPLETE.md  THIRD_PARTY_LICENSES.md  build.yml  build_standalone.py  launcher.py  launcher_webview.py  nanki_qt.py  pyproject.toml  standalone.py  test_apcg_coverage.py  test_apcg_v2_modes.py
.claude/: launch.json
.github/workflows/: build-desktop.yml  build-macos.yml  build-standalone.yml  build-windows.yml  build.yml  ci.yml
apps/desktop/: .gitignore  BUILD.md  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
apps/desktop/e2e/: app.spec.js
apps/desktop/playwright-report/: index.html
apps/desktop/src/: App.jsx  App.test.jsx  main.jsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: app-shell.jsx  app-shell.test.jsx  app-sidebar.jsx  command-palette.jsx  command-palette.test.jsx  obsidian-editor.jsx  onboarding-tour.jsx  theme-provider.jsx
apps/desktop/src/hooks/: use-onboarding.js
apps/desktop/src/lib/: api.js  api.test.jsx
apps/desktop/src/locale/: de.js  en.js  i18n.js
apps/desktop/src/stores/: app-store.js  cards-store.js  notes-store.js  (+1 more)
assets/: generate-icons.py  nanki-icon.icns
backend/python-core/: requirements.txt  run.py
backend/python-core/nanki_core/: __init__.py  ai.py  anki_connect.py  app.py  coverage_utils.py  models.py  prompts.py  storage.py  updater.py
backend/python-core/tests/: test_health.py  test_notes_cards.py
build-scripts/: build-macos.sh  build-windows.ps1
docs/: APCG_COVERAGE.md  DOCUMENTATION.md
docs/screenshots/: README.md
scripts/: take-screenshots-v2.js  take-screenshots.js
src/nanki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/noteforge_anki_studio/: __init__.py  __main__.py  ai.py  anki_connect.py  app.py  config.py  coverage.py  coverage_apcg.py  coverage_utils.py  exporters.py  importers.py  importers_extended.py  models.py  prompts.py  stats.py  storage.py  tts_service.py
src/noteforge_anki_studio/static/: ai.css  ai_ui.js  app.js  coverage.js  dark-mode.css  keyboard-shortcuts.js  polish.css  stats-dashboard.css  stats-dashboard.js  styles.css  theme-toggle.js  tts-component.js
src/noteforge_anki_studio/templates/: index.html
tests/: test_smoke.py
(+38 files in other folders)
