[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanki"
version = "0.3.2"
description = "Nanki: local-first study notes and flashcards with AnkiConnect integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nanki Project Contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "httpx>=0.27",
  "mistune>=3.0",
  "PyMuPDF>=1.24",
  "markdownify>=0.13",
  "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.15.0",
  "mypy>=1.10.0",
  "pre-commit>=3.0",
  "build>=1.0",
  "types-PyYAML",
  "types-markdown",
]

[project.scripts]
nanki = "noteforge_anki_studio.__main__:main"
noteforge-anki-studio = "noteforge_anki_studio.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noteforge_anki_studio = ["templates/*.html", "static/*"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ARG", "G",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
